tests/restrict-tenant-network-policies/kyverno-author/user-info.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: kyverno-background-controller
userInfo:
  username: system:serviceaccount:kyverno:kyverno-background-controller
  groups:
    - system:serviceaccounts
    - system:serviceaccounts:kyverno
    - system:authenticated
